test-cases/valid/reject/duplicate_parameter_name.ul
int foo(int bar, boolean bar) {
    return 1;
}

void main() {
    foo(1, false);
}
